# Earth-Copilot

./: .env.example  .gitignore  AZURE_SETUP_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  QUICK_DEPLOY.md  README.md  SECURITY.md  SECURITY_ANALYSIS.md  SECURITY_CHECKLIST.md  SECURITY_CLEANUP_SUMMARY.md  STARTUP_GUIDE.md  SUPPORT.md  SYSTEM_REQUIREMENTS.md  azure.yaml  check-security.ps1  collect-env-vars.ps1  deploy-all.ps1  deploy-infrastructure.ps1  enable-webapp-auth.ps1  fabric-capacity.params.json  kill-all-services.ps1  kill-all-services.sh  pytest.ini  redeploy-mcp-server.ps1  requirements.txt  run-all-services.ps1  run-all-services.sh  setup-all-services.ps1  setup-all-services.sh  setup-github-auth.ps1  verify-requirements.py
.github/: environment-config-template.yml
ai-search/: README.md
container-app/: Dockerfile  Dockerfile.complete  build-log.txt  colormap_service.py  deploy-backend.ps1  hybrid_rendering_system.py  run-agent-tests.ps1  semantic_translator.py  tile_selector.py  titiler_config.py  veda_collection_profiles.py
core/: __init__.py  config.py  env_loader.py
documentation/: endpoint_architecture.md  map.md  planetary_computer.md  semantic_translator_logic.md  stac_availability.md  veda_ai_search_poc.md
earth-copilot/: .dockerignore  .gitignore  __init__.py  azure.yaml  deploy-all.ps1
infra/: main.bicep
m365/: .gitignore  build.env.sample
m365/mcp-server/: .gitignore  Dockerfile  README.md  pyproject.toml  server.py  start-mcp.ps1
m365/mcp-server/tests/: conftest.py  test_server.py
mcp-server/: README.md  (+2 more)
(+655 files in other folders)
