[project]
name = "planetary-explorer-resilience-mcp"
version = "0.1.0"
description = "MCP server wrapping the Planetary Explorer Resilience agent API."
requires-python = ">=3.11"
dependencies = [
    # Pinned minor versions. mcp 1.2+ ships the streamable-http transport.
    "mcp>=1.2.0,<2.0.0",
    "httpx>=0.27.0,<0.29.0",
    "starlette>=0.37.0,<0.42.0",
    "uvicorn[standard]>=0.30.0,<0.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
planetary-explorer-resilience-mcp = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
